Top navbar is now different on mobile

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="/static/favicon.png"/>
     <title>Clauto</title>
   </head>
   <body>
